[gd_scene load_steps=16 format=3 uid="uid://bgunpxx3n2af6"]

[ext_resource type="Texture2D" uid="uid://d37i2aan2q7n4" path="res://assets/GUI/BG/Background.png" id="1_2g543"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_81371"]
[ext_resource type="Texture2D" uid="uid://ba3qph6ha4o7y" path="res://assets/GUI/BG/Green_Horizon.png" id="2_6gk8m"]
[ext_resource type="Texture2D" uid="uid://csvcrpch5ac78" path="res://assets/GUI/Buttons/Play/Play_Normal.png" id="3_7otcx"]
[ext_resource type="Texture2D" uid="uid://v8dqp5gb656w" path="res://assets/GUI/Buttons/Play/Play_Click.png" id="4_p50rd"]
[ext_resource type="Texture2D" uid="uid://cac0pue3glpfo" path="res://assets/GUI/Buttons/Play/Play_Hover.png" id="5_fkskm"]
[ext_resource type="Texture2D" uid="uid://i285j0c3lps7" path="res://assets/GUI/Buttons/Options/Options_Normal.png" id="6_n3lja"]
[ext_resource type="Texture2D" uid="uid://6p2woe5o2n2r" path="res://assets/GUI/Buttons/Options/Options_Click.png" id="7_awex8"]
[ext_resource type="Texture2D" uid="uid://ckr1itibsn7m8" path="res://assets/GUI/Buttons/Options/Options_Hover.png" id="8_gwcko"]
[ext_resource type="Texture2D" uid="uid://bh26xkn71lm04" path="res://assets/GUI/Buttons/Exit/Exit_Normal.png" id="9_c7luj"]
[ext_resource type="Texture2D" uid="uid://ct5os7g6swept" path="res://assets/GUI/Buttons/Exit/Exit_Click.png" id="10_uh7qb"]
[ext_resource type="Texture2D" uid="uid://dao4oipvfptoy" path="res://assets/GUI/Buttons/Exit/Exit_Hover.png" id="11_mapdg"]
[ext_resource type="PackedScene" uid="uid://wctwg6o7g6lv" path="res://scenes/options_menu.tscn" id="13_lxgql"]
[ext_resource type="AudioStream" uid="uid://dedko2buvekhi" path="res://assets/GUI/Music/BGM/Ludum Dare 30 06 - MU.ogg" id="14_flk3k"]
[ext_resource type="AudioStream" uid="uid://b8j5kqhpfejbo" path="res://assets/GUI/Music/SFX/Select 1.wav" id="15_8ewhu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81371")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2g543")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Vertical_Alignment" type="VBoxContainer" parent="Margins"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Separator" type="Control" parent="Margins/Vertical_Alignment"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="Margins/Vertical_Alignment"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_6gk8m")

[node name="Horizontal_Alignment" type="HBoxContainer" parent="Margins"]
layout_mode = 2
alignment = 1

[node name="Vertical_Separation" type="VBoxContainer" parent="Margins/Horizontal_Alignment"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Separator" type="Control" parent="Margins/Horizontal_Alignment/Vertical_Separation"]
layout_mode = 2

[node name="Separator2" type="Control" parent="Margins/Horizontal_Alignment/Vertical_Separation"]
layout_mode = 2

[node name="Play" type="TextureButton" parent="Margins/Horizontal_Alignment/Vertical_Separation"]
layout_mode = 2
texture_normal = ExtResource("3_7otcx")
texture_pressed = ExtResource("4_p50rd")
texture_hover = ExtResource("5_fkskm")

[node name="Options" type="TextureButton" parent="Margins/Horizontal_Alignment/Vertical_Separation"]
layout_mode = 2
texture_normal = ExtResource("6_n3lja")
texture_pressed = ExtResource("7_awex8")
texture_hover = ExtResource("8_gwcko")

[node name="Exit" type="TextureButton" parent="Margins/Horizontal_Alignment/Vertical_Separation"]
layout_mode = 2
texture_normal = ExtResource("9_c7luj")
texture_pressed = ExtResource("10_uh7qb")
texture_hover = ExtResource("11_mapdg")

[node name="Options_Menu" parent="." instance=ExtResource("13_lxgql")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_flk3k")
autoplay = true
bus = &"Music"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_8ewhu")
bus = &"SFX"
